# hackathon

./: .gitignore  .rustfmt.toml  Cargo.toml
src/: data_share.rs  detect.rs  image_manipulation.rs  img_buffer.rs  komische_berechnung.rs  lib.rs  main.rs  visualization.rs  webcam_loop.rs
src/img_buffer/: img_buffer.rs  img_loop.rs  mod.rs
src/img_queue/: img_loop.rs  img_queue.rs  mod.rs
src/loops/: calculation_loop.rs  img_loop.rs  mod.rs  webcam_loop.rs
