[package]
name = "hackathon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_extras = { version = "0.21.0", features = ["image"] }
image = { version = "0.24", features = ["jpeg", "png"] }
egui = "0.21.0"
eframe = "0.21.0"
cgmath = "0.18.0"
glam = "0.24.0"
rscam = "0.5.5"
smol = "1.3.0"
derive_more = "*"